Fix account name wrapping

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -7082,7 +7082,7 @@ noscript {
         color: $primary-text-color;
         font-weight: 700;
         overflow: hidden;
-        white-space: nowrap;
+        // white-space: nowrap;
         text-overflow: ellipsis;
 
         small {
